fix/fix bug with categories on mobile

--- a/components/basic/style.scss
+++ b/components/basic/style.scss
@@ -719,6 +719,10 @@ img {
 .category-img-holder {
     height: 100%;
     min-width: 0;
+
+    @include mobile {
+        flex-basis: 10%;
+    }
     
     img {
         min-width: 0;
