--- a/components/categories/categories.scss
+++ b/components/categories/categories.scss
@@ -38,6 +38,10 @@
 .category-img-holder {
     height: 100%;
     min-width: 0;
+
+    @include mobile {
+        flex-basis: 10%;
+    }
     
     img {
         min-width: 0;
